# surface-reconstruction

./: CMakeLists.txt  README.md  slides.pptx
data/: horsenp.contour  ltparotoidp10.contour  pellip.contour  ringc1.contour  ringc2.contour  sshape.contour  ttube1.contour  ttube2.contour  ttubes.contour
data/convex_cells/pellip/: cell_0.off  cell_1.off  cell_10.off  cell_11.off  cell_12.off  cell_13.off  cell_2.off  cell_3.off  cell_4.off  cell_5.off  cell_6.off  cell_7.off  cell_8.off  cell_9.off
data/convex_cells/ringc1/: cell_0.off  cell_1.off  cell_10.off  cell_11.off  cell_2.off  cell_3.off  cell_4.off  cell_5.off  cell_6.off  cell_7.off  cell_8.off  cell_9.off
data/convex_cells/ringc2/: cell_1.off  cell_10.off  cell_2.off  cell_3.off  cell_4.off  cell_5.off  cell_6.off  cell_7.off  cell_8.off  cell_9.off
data/convex_cells/sshape/: cell_0.off  cell_1.off  cell_2.off  cell_3.off  cell_4.off  cell_5.off
data/convex_cells/ttube1/: cell_0.off  cell_1.off  cell_2.off
data/convex_cells/ttube2/: cell_0.off  cell_1.off
data/convex_cells/ttubes/: cell_0.off  cell_1.off  cell_2.off  cell_3.off  cell_4.off  cell_5.off
include/: camera.h  contour.h  filesystem.h  partition.h  projection.h
src/: camera.cpp  contour.cpp  filesystem.cpp  main.cpp  partition.cpp  projection.cpp
